# Anywhere-Android

./: .editorconfig  .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/argsment/anywhere/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/argsment/anywhere/: MainActivity.kt
app/src/main/java/com/argsment/anywhere/data/model/: DeviceCensorship.kt  DomainRule.kt  ProxyChain.kt  ProxyConfiguration.kt  Subscription.kt  TunnelSettings.kt  VlessConfiguration.kt
app/src/main/java/com/argsment/anywhere/data/network/: ClashProxyParser.kt  LatencyTester.kt  SubscriptionDomainHelper.kt  SubscriptionFetcher.kt
app/src/main/java/com/argsment/anywhere/data/repository/: AtomicWrite.kt  CertificateRepository.kt  ChainRepository.kt  ConfigRepository.kt  RuleSetRepository.kt  SubscriptionRepository.kt
app/src/main/java/com/argsment/anywhere/data/rules/: CountryBypassCatalog.kt  RulesDatabase.kt  ServiceCatalog.kt
app/src/main/java/com/argsment/anywhere/ui/components/: AppIconView.kt  PowerButton.kt  ProxyCard.kt  TrafficStats.kt
app/src/main/java/com/argsment/anywhere/ui/home/: HomeScreen.kt
app/src/main/java/com/argsment/anywhere/ui/navigation/: AppNavigation.kt
app/src/main/java/com/argsment/anywhere/ui/onboarding/: OnboardingScreen.kt
app/src/main/java/com/argsment/anywhere/ui/proxy/: AddProxyScreen.kt  ChainEditorScreen.kt  ChainListScreen.kt  ProxyEditorScreen.kt  ProxyListScreen.kt
app/src/main/java/com/argsment/anywhere/ui/scanner/: QrScannerScreen.kt
app/src/main/java/com/argsment/anywhere/ui/settings/: AcknowledgementsScreen.kt  AdvancedSettingsScreen.kt  CustomRuleSetDetailScreen.kt  EncryptedDnsSettingsScreen.kt  Ipv6SettingsScreen.kt  LogListScreen.kt  RuleSetListScreen.kt  SettingsScreen.kt  SubScreenTransition.kt  TrustedCertificatesScreen.kt
app/src/main/java/com/argsment/anywhere/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/argsment/anywhere/viewmodel/: LogsModel.kt  VpnViewModel.kt
app/src/main/java/com/argsment/anywhere/vpn/: ActivityTimer.kt  AnywhereVpnService.kt  DomainRouter.kt  FakeIpPool.kt  GeoIpDatabase.kt  LwipStack.kt  LwipTcpConnection.kt  LwipUdpFlow.kt  NativeBridge.kt  SocketProtector.kt  Tls13Crypto.kt  TunnelConstants.kt  X25519Crypto.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/: ProxyClientFactory.kt  ProxyConnection.kt  ProxyUserAgent.kt  Transport.kt  TunneledTransport.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/direct/: DirectTcpRelay.kt  DirectUdpRelay.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/grpc/: GrpcClient.kt  GrpcConfiguration.kt  GrpcConnection.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/httpupgrade/: HttpUpgradeClient.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/hysteria/: HysteriaClient.kt  HysteriaConfiguration.kt  HysteriaConnection.kt  HysteriaHttp3Codec.kt  HysteriaProtocol.kt  HysteriaSession.kt  HysteriaSessionPool.kt  HysteriaUdpConnection.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/mux/: MuxClient.kt  MuxFrame.kt  MuxManager.kt  MuxSession.kt  Xudp.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/naive/: NaiveClient.kt  NaiveConfiguration.kt  NaivePaddingFramer.kt  NaivePaddingNegotiator.kt  NaiveProxyConnection.kt  NaiveTlsTransport.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/reality/: RealityClient.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/shadowsocks/: Shadowsocks2022.kt  ShadowsocksAead.kt  ShadowsocksClient.kt  ShadowsocksConnection.kt  ShadowsocksProtocol.kt  ShadowsocksUdpRelay.kt  ShadowsocksUdpSession.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/socks5/: SocksClient.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/tls/: CertificatePolicy.kt  Tls12KeyDerivation.kt  Tls13KeyDerivation.kt  TlsClient.kt  TlsClientHelloBuilder.kt  TlsRecordConnection.kt  TlsRecordTransport.kt
app/src/main/java/com/argsment/anywhere/vpn/protocol/trojan/: TrojanClient.kt  TrojanConnection.kt  TrojanProtocol.kt  (+1 more)
app/src/main/java/com/argsment/anywhere/vpn/quic/: BrutalCongestionControl.kt  QuicBridge.kt  QuicConnection.kt  QuicNativeCrypto.kt  QuicTlsHandler.kt  QuicTuning.kt
app/src/main/java/com/argsment/anywhere/vpn/util/: AnywhereLogger.kt  DnsCache.kt  Extensions.kt  LogBuffer.kt  NioSocket.kt  PacketUtil.kt  TlsClientHelloSniffer.kt  TransportErrorLogger.kt
app/src/main/jni/: CMakeLists.txt  blake3_jni_bridge.c  crypto_jni_bridge.c  geoip_jni_bridge.c  lwip_jni_bridge.c  ngtcp2_android_brutal.c  packet_jni_bridge.c  quic_jni_bridge.c  vless_jni_bridge.c  yaml_jni_bridge.c
app/src/main/jni/blake3/: CTLSKeyDerivation.h  CX25519.c  CX25519.h
app/src/main/jni/compat/CommonCrypto/: CommonDigest.h  CommonHMAC.h
app/src/main/jni/compat/os/: log.h
app/src/main/jni/crypto/: CTLSKeyDerivation.c  CTLSKeyDerivation.h
app/src/main/jni/lwip/: ANYWHERE_PATCHES.md  lwip_bridge.c  lwip_bridge.h
app/src/main/jni/lwip/port/: lwipopts.h  sys_arch.c
app/src/main/jni/lwip/port/arch/: cc.h
app/src/main/jni/lwip/src/core/: tcp_in.c  tcp_out.c
app/src/main/jni/lwip/src/core/ipv4/: icmp.c
app/src/main/jni/lwip/src/include/lwip/priv/: tcp_priv.h
app/src/main/jni/ngtcp2/: config.h  ngtcp2_bridge.h  ngtcp2_crypto_android.c
app/src/main/res/drawable/: ic_network_outlined.xml  ic_telegram_symbol.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-my/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/argsment/anywhere/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+19 files in other folders)
